created cards for each event

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 
   </head>
-  <header>
-    <img src="" alt="" id="logo">
-    <ul class="nav">
+  <header id="header">
+    <img src="images/herSoiree-word-logo.jpg" id="her_soiree_logo">
+    <ul class="nav" id="navlinks">
   <li class="nav-item">
-    <a class="nav-link active" href="/">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/">Link</a>
+    <a class="nav-link" href="/showall.html">All Soirees</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/">Link</a>
@@ -28,8 +26,10 @@
   </li>
 </ul>
   </header>
-  <main class="container">
-    <p>products go heare</p>
+  <main class="container" id="maincontainer">
+    <section class="row">
+
+    </section>
   </main>
 
 
