--- a/her_soiree.html
+++ b/her_soiree.html
@@ -34,6 +34,6 @@
 
 
   <script src="shared.js" type="text/javascript"></script>
-  <script src="index.js" type="text/javascript"></script>
+  <script src="her_soiree.js" type="text/javascript"></script>
   </body>
 </html>
