--- a/her_soiree.html
+++ b/her_soiree.html
@@ -16,10 +16,10 @@
     <img src="images/herSoiree-word-logo.jpg" id="her_soiree_logo">
     <ul class="nav" id="navlinks">
   <li class="nav-item">
-    <a class="nav-link" href="/showall.html">All Soirees</a>
+    <a class="nav-link" href="/">All Soirees</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/">Link</a>
+    <a class="nav-link" href="/create.html">Create Soiree</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" href="/">Disabled</a>
